# GraphVelo

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  index.md  index.rst  make.bat
docs/_templates/: class_no_inherited.rst
docs/source/: API.rst  about.rst  conf.py  docs_download_utils.py  index.md  index.rst  installation.rst  reference.rst  references.bib
docs/source/_static/css/: custom.css
docs/source/graphvelo_notebooks/: README.md
docs/source/graphvelo_notebooks/tutorials/: figure2_dyngen.ipynb  index.rst  tutorial_for_scvelo.ipynb  tutorial_hcmv.ipynb  variable_rate_simulation.ipynb
graphvelo/: __init__.py  gam.py  graph_velocity.py  metrics.py  mo.py  plot.py  utils.py
notebook/: cr2_helper_func.py  paths.py  tutorial_for_scvelo.ipynb
notebook/HCMV/: gene_module.ipynb  speed_analyses.ipynb
notebook/SARS-CoV-2/: cellrank_analyses.ipynb
notebook/benchmark/: benchmark_streamplot.py  cbc_score.ipynb
notebook/human_bonemarrow/: compare_n_genes.ipynb  infer_gamma.ipynb
notebook/human_cortex_multiomics/: graphvelo.ipynb
notebook/mack_convergence_test/: human_bonemarrow.ipynb  mouse_erythroid.ipynb
notebook/mouse_erythroid/: compare_n_genes.ipynb  graphvelo_scv.ipynb  murk_gene.ipynb
notebook/mouse_hair_multiomics/: cellrank_gv.ipynb  figure5_graphvelo.ipynb
tests/: test_graphvelo.py
