[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
name = "GraphVelo"
version = "0.1.3"
description = "Inferring manifold-constrained velocity and transforming vectors across representations"
authors = [{ name = "Yuhao Chen", email = "yuhaoc@zju.edu.cn" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",]
requires-python = ">=3.8"

[tool.flit.module]
name = "graphvelo"

dependencies = [
    "tqdm",
    "numpy",
    "scipy",
    "pygam",
    "joblib",
    "pandas",
    "scikit-learn",
    "anndata",
    "scanpy",
    "dynamo-release",
    "matplotlib",
    "seaborn",
]


[project.urls]
homepage = "https://github.com/xing-lab-pitt/GraphVelo"
documentation = "https://github.com/xing-lab-pitt/GraphVelo"
repository = "https://github.com/xing-lab-pitt/GraphVelo"

[project.scripts]
poetry = "infer_pyproject.cli:main"