[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
name = "GraphVelo"
version = "0.1.8"
description = "Inferring manifold-constrained velocity and transforming vectors across representations"
authors = [{ name = "Yuhao Chen", email = "yuhaoc@zju.edu.cn" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",]
requires-python = ">=3.8"

[tool.flit.module]
name = "graphvelo"

dependencies = [
    "tqdm",
    "numpy==1.24.3",
    "scipy==1.10.1",
    "pygam>=0.9.1",
    "joblib",
    "pandas==2.0.3",
    "scikit-learn==1.3.2",
    "anndata",
    "scanpy==1.9.8",
    "matplotlib==3.7.5",
    "seaborn>=0.13.2",
]


[project.urls]
homepage = "https://github.com/xing-lab-pitt/GraphVelo"
documentation = "https://github.com/xing-lab-pitt/GraphVelo"
repository = "https://github.com/xing-lab-pitt/GraphVelo"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "furo",
    "GitPython",
]